Fixes for landing page scrolling on mobile

--- a/src/global.sass
+++ b/src/global.sass
@@ -36,11 +36,8 @@
 	background: var(--mainaccent)
 
 body
-	display: flex
-	flex-direction: column
-	background-color: var(--background)
-	height: 100vh
-	
+			background-color: var(--background)
+
 ::-webkit-scrollbar
 	width: 1rem
 	height: 1rem
